--- a/src/Component/Component.csproj
+++ b/src/Component/Component.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
+    <VersionPrefix>1.0.1</VersionPrefix>
+    <VersionSuffix>$(VersionSuffix)</VersionSuffix>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
     <AssemblyName>Skclusive.Mobx.Component</AssemblyName>
@@ -13,7 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.0-preview2.19528.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.0-preview2.19528.8" />
-    <PackageReference Include="Skclusive.Mobx.Observable" Version="1.0.0" />
+    <PackageReference Include="Skclusive.Mobx.Observable" Version="1.0.1" />
   </ItemGroup>
 </Project>
 
