--- a/src/Component/Component.csproj
+++ b/src/Component/Component.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <VersionPrefix>1.0.4</VersionPrefix>
+    <VersionPrefix>1.0.6</VersionPrefix>
     <VersionSuffix>$(VersionSuffix)</VersionSuffix>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
     <AssemblyName>Skclusive.Mobx.Component</AssemblyName>
     <PackageId>Skclusive.Mobx.Component</PackageId>
@@ -13,10 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.0-preview3.19555.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.0-preview3.19555.2" />
-    <PackageReference Include="Skclusive.Core.Component" Version="1.0.1" />
-    <PackageReference Include="Skclusive.Mobx.Observable" Version="1.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.0" />
+    <PackageReference Include="Skclusive.Core.Component" Version="1.0.4" />
+    <PackageReference Include="Skclusive.Mobx.Observable" Version="1.0.4" />
   </ItemGroup>
 </Project>
 
