--- a/samples/CounterApp/CounterApp.csproj
+++ b/samples/CounterApp/CounterApp.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
    <ItemGroup>
-     <!-- <PackageReference Include="Skclusive.Mobx.Component" Version="2.0.0-rc" /> -->
+     <!-- <PackageReference Include="Skclusive.Mobx.Component" Version="2.0.0" /> -->
      <ProjectReference Include="..\..\src\Component\Component.csproj" />
    </ItemGroup>
 
