--- a/src/Component/Component.csproj
+++ b/src/Component/Component.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <VersionPrefix>2.0.0-rc</VersionPrefix>
+    <VersionPrefix>2.0.0</VersionPrefix>
     <VersionSuffix>$(VersionSuffix)</VersionSuffix>
     <TargetFramework>netstandard2.1</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
@@ -17,12 +17,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Skclusive.Core.Component" Version="2.0.0-rc" />
+    <PackageReference Include="Skclusive.Core.Component" Version="2.0.0" />
     <PackageReference Include="Skclusive.Mobx.Observable" Version="1.0.4" />
   </ItemGroup>
 
   <!-- <ItemGroup>
-    <ProjectReference Include="..\..\..\Skclusive.Core.Component\src\Component.csproj" Version="2.0.0-rc" />
+    <ProjectReference Include="..\..\..\Skclusive.Core.Component\src\Component.csproj" Version="2.0.0" />
   </ItemGroup> -->
 
 </Project>
