--- a/src/Component/Component.csproj
+++ b/src/Component/Component.csproj
@@ -1,10 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <VersionPrefix>2.0.0</VersionPrefix>
+    <VersionPrefix>3.0.0-preview1</VersionPrefix>
     <VersionSuffix>$(VersionSuffix)</VersionSuffix>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <RazorLangVersion>3.0</RazorLangVersion>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Skclusive.Mobx.Component</AssemblyName>
     <PackageId>Skclusive.Mobx.Component</PackageId>
     <RootNamespace>Skclusive.Mobx.Component</RootNamespace>
@@ -17,13 +16,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Skclusive.Core.Component" Version="2.0.0" />
+    <PackageReference Include="Skclusive.Core.Component" Version="3.0.0-preview1" />
     <PackageReference Include="Skclusive.Mobx.Observable" Version="1.0.4" />
   </ItemGroup>
 
   <!-- <ItemGroup>
-    <ProjectReference Include="..\..\..\Skclusive.Core.Component\src\Component.csproj" Version="2.0.0" />
+    <ProjectReference Include="..\..\..\Skclusive.Core.Component\src\Component.csproj" Version="3.0.0-preview1" />
   </ItemGroup> -->
 
 </Project>
-
