--- a/src/Component.csproj
+++ b/src/Component.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <VersionPrefix>5.0.0-rc4</VersionPrefix>
+    <VersionPrefix>5.0.0</VersionPrefix>
     <VersionSuffix>$(VersionSuffix)</VersionSuffix>
     <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Skclusive.Mobx.Component</AssemblyName>
@@ -16,13 +16,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Skclusive.Core.Component" Version="5.0.0-rc4" />
-    <PackageReference Include="Skclusive.Mobx.Observable" Version="5.0.0-rc4" />
+    <PackageReference Include="Skclusive.Core.Component" Version="5.0.0" />
+    <PackageReference Include="Skclusive.Mobx.Observable" Version="5.0.0" />
   </ItemGroup>
 
   <!-- <ItemGroup>
-    <ProjectReference Include="..\..\Skclusive.Core.Component\src\Component.csproj" Version="5.0.0-rc4" />
-    <ProjectReference Include="..\..\Skclusive.Mobx.Observable\src\Observable.csproj" Version="5.0.0-rc4" />
+    <ProjectReference Include="..\..\Skclusive.Core.Component\src\Component.csproj" Version="5.0.0" />
+    <ProjectReference Include="..\..\Skclusive.Mobx.Observable\src\Observable.csproj" Version="5.0.0" />
   </ItemGroup> -->
 
 </Project>
