--- a/src/Component.csproj
+++ b/src/Component.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <VersionPrefix>5.0.0</VersionPrefix>
+    <VersionPrefix>5.1.0</VersionPrefix>
     <VersionSuffix>$(VersionSuffix)</VersionSuffix>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net5.0</TargetFrameworks>
+    <RazorLangVersion>3.0</RazorLangVersion>
     <AssemblyName>Skclusive.Mobx.Component</AssemblyName>
     <PackageId>Skclusive.Mobx.Component</PackageId>
     <RootNamespace>Skclusive.Mobx.Component</RootNamespace>
@@ -16,13 +17,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Skclusive.Core.Component" Version="5.0.0" />
-    <PackageReference Include="Skclusive.Mobx.Observable" Version="5.0.0" />
+   <PackageReference Include="Skclusive.Core.Component" Version="5.1.0" />
+    <PackageReference Include="Skclusive.Mobx.Observable" Version="5.1.0" />
   </ItemGroup>
 
-  <!-- <ItemGroup>
-    <ProjectReference Include="..\..\Skclusive.Core.Component\src\Component.csproj" Version="5.0.0" />
-    <ProjectReference Include="..\..\Skclusive.Mobx.Observable\src\Observable.csproj" Version="5.0.0" />
-  </ItemGroup> -->
+  <ItemGroup>
+    <!-- <ProjectReference Include="..\..\Skclusive.Core.Component\src\Component.csproj" Version="5.1.0" /> -->
+<!--    <ProjectReference Include="..\..\Skclusive.Mobx.Observable\src\Observable.csproj" Version="5.1.0" />-->
+  </ItemGroup>
 
 </Project>
