--- a/src/Component.csproj
+++ b/src/Component.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <VersionPrefix>5.1.2</VersionPrefix>
+    <VersionPrefix>5.2.0</VersionPrefix>
     <VersionSuffix>$(VersionSuffix)</VersionSuffix>
     <TargetFrameworks>netstandard2.0;net5.0</TargetFrameworks>
     <RazorLangVersion>3.0</RazorLangVersion>
@@ -17,13 +17,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-   <PackageReference Include="Skclusive.Core.Component" Version="5.1.2" />
-    <PackageReference Include="Skclusive.Mobx.Observable" Version="5.1.2" />
+   <PackageReference Include="Skclusive.Core.Component" Version="5.2.0" />
+    <PackageReference Include="Skclusive.Mobx.Observable" Version="5.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <!-- <ProjectReference Include="..\..\Skclusive.Core.Component\src\Component.csproj" Version="5.1.2" /> -->
-<!--    <ProjectReference Include="..\..\Skclusive.Mobx.Observable\src\Observable.csproj" Version="5.1.2" />-->
+    <!-- <ProjectReference Include="..\..\Skclusive.Core.Component\src\Component.csproj" /> -->
+<!--    <ProjectReference Include="..\..\Skclusive.Mobx.Observable\src\Observable.csproj" />-->
   </ItemGroup>
 
 </Project>
